# gazelle-nestjs

./: .bazelignore  .deepsource.toml  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bazel-bin  bazel-gazelle-nestjs  bazel-out  bazel-testlogs  def.bzl  deps.bzl  go.mod  go.sum
cmd/: BUILD.bazel  diff.go  fix_update.go  langs.go  meta_resolver.go  update_repos.go
examples/: .bazelignore  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  package.json  pnpm-lock.yaml
examples/.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
examples/apps/api/: BUILD.bazel  package.json
examples/apps/api/src/: api.controller.spec.ts
examples/apps/api/test/: app.e2e-spec.ts
examples/apps/scheduler/: BUILD.bazel  package.json  tsconfig.app.json
examples/apps/scheduler/src/: scheduler.controller.spec.ts  scheduler.controller.ts  scheduler.module.ts
examples/libs/auth/: BUILD.bazel  package.json
examples/libs/user/: BUILD.bazel  package.json  tsconfig.test.json
examples/libs/user/src/: index.ts
examples_v2/: BUILD.bazel  WORKSPACE  nest-cli.json  package.json  tsconfig.json
examples_v2/.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
examples_v2/apps/api/: BUILD.bak
examples_v2/apps/api/src/: api.module.ts  api.service.ts
gazelle/: BUILD  BUILD.bazel  colors.go  config.go  fix.go  fix_package_json.go  generate.go  generate_jest.go  generate_jest_test.go  generate_ts_project.go  import.go  jest_config.go  kinds.go  lang.go  nest_cli_config.go  parse.go  parse_test.go  resolve.go  ts_config.go  type.go
internal/module/: BUILD.bazel
internal/nestjs/: fix_package_json.go
internal/wspace/: BUILD.bazel
tools/: BUILD.bazel  deps.bzl
