# module(
#     name = "com_github_lekhanhtoan37_gazelle_nestjs",
#     version = "v0.0.1",
#     compatibility_level = 1,
# )

# bazel_dep(name = "rules_go", version = "0.42.0", repo_name = "io_bazel_rules_go")
# bazel_dep(name = "gazelle", version = "0.34.0", repo_name = "bazel_gazelle")

# go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
# go_deps.from_file(go_mod = "//:go.mod")
# use_repo(
#     go_deps,
#     "com_github_bazelbuild_buildtools",
#     "com_github_bazelbuild_bazel_gazelle",
#     "com_github_pmezard_go_difflib"
# )
