load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "diff.go",
        "fix.go",
        "fix_update.go",
        "langs.go",
        "main.go",
        "meta_resolver.go",
        "print.go",
        "profiler.go",
        "update_repos.go",
    ],
    importpath = "github.com/lekhanhtoan37/gazelle-nestjs/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//gazelle",
        "//internal/module",
        "//internal/wspace",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//flag:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//merger:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@bazel_gazelle//walk:go_default_library",
        "@com_github_pmezard_go_difflib//difflib",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
