load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "api_ts_test",
    srcs = ["src/api.controller.spec.ts"],
    data = [
        ":api",
        "//:node_modules/@app/auth",
        "//:node_modules/@nestjs/testing",
        "//:node_modules/@types/jest",
        "//:node_modules/jest",
    ],
    declaration = True,
    extends = "//:examples_tsconfig",
    incremental = True,
    source_map = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:.swcrc",
    ),
    tsconfig = {},
    visibility = ["//visibility:public"],
    deps = [
        ":api",
        "//:node_modules/@app/auth",
        "//:node_modules/@nestjs/testing",
        "//:node_modules/@types/jest",
        "//:node_modules/jest",
    ],
)

jest_test(
    name = "api_test",
    config = "//:examples_package_json",
    data = [
        ":api",
        ":api_ts_test",
        "//:node_modules/@app/auth",
        "//:node_modules/@nestjs/testing",
        "//:node_modules/@types/jest",
        "//:node_modules/jest",
    ],
    node_modules = "//:node_modules",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "api",
    srcs = [
        "src/api.controller.ts",
        "src/api.module.ts",
        "src/api.service.ts",
        "src/main.ts",
    ],
    data = [
        "//:node_modules/@app/auth",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
    ],
    declaration = True,
    extends = "//:examples_tsconfig",
    incremental = True,
    source_map = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:.swcrc",
    ),
    tsconfig = ":tsconfig.app.json",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@app/auth",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
    ],
)
