load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "scheduler_ts_test",
    srcs = ["src/scheduler.controller.spec.ts"],
    data = ["//:node_modules/@nestjs/testing"],
    declaration = True,
    extends = "//:examples_tsconfig",
    incremental = True,
    source_map = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:.swcrc",
    ),
    tsconfig = {},
    visibility = ["//visibility:public"],
    deps = [
        ":scheduler",
        "//:node_modules/@nestjs/testing",
    ],
)

jest_test(
    name = "scheduler_test",
    config = "//:examples_package_json",
    data = [
        ":scheduler",
        ":scheduler_ts_test",
        "//:node_modules/@nestjs/testing",
        "//:node_modules/@types/jest",
        "//:node_modules/jest",
    ],
    node_modules = "//:node_modules",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "scheduler",
    srcs = [
        "src/main.ts",
        "src/scheduler.controller.ts",
        "src/scheduler.module.ts",
        "src/scheduler.service.ts",
    ],
    data = [
        "//:node_modules/@app/auth",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
    ],
    declaration = True,
    extends = "//:examples_tsconfig",
    incremental = True,
    source_map = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:.swcrc",
    ),
    tsconfig = ":tsconfig.app.json",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@app/auth",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
    ],
)

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)
